--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp.spritesmith": "^6.12.1",
+    "gulp.spritesmith-multi": "^3.1.0",
     "merge-stream": "^2.0.0",
     "sass": "^1.50.1",
     "vinyl-buffer": "^1.0.1"
